--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "morgan": "~1.9.0",
