--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "crypto-js": "^4.0.0",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "google-auth-library": "^6.0.0",
     "morgan": "~1.9.0",
     "nano": "^8.2.2",
     "nodemon": "^2.0.2"
